# battleship-like

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindCheck.cmake
docs/: Battleship_logic.drawio
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main_tests.c
